# ECHO-Repro

./: .gitignore  AGENTS.md  README.md  pyproject.toml
echo_repro/: __init__.py
examples/: issue_example.txt
examples/mock_buggy_repo/: buggy_module.py  reproduce_expected_behavior.md  test_buggy_module.py
examples/mock_fixed_repo/: buggy_module.py
scripts/: create_swebench_sample.py  download_swebench_lite.py  summarize_swebench_experiment.py
src/echo_repro/: bug_spec.py  cli.py  code_cleaner.py  config.py  context_builder.py  environment.py  executor.py  feedback_loop.py  harness_generator.py  models.py  pipeline.py  prompts.py  repo_manager.py  result_writer.py  retriever.py  swebench_adapter.py  validator.py
src/echo_repro/llm/: __init__.py  anthropic_client.py  base.py  mock_client.py  openai_client.py
src/echo_repro/utils/: __init__.py  file_utils.py
tests/: test_anthropic_client.py  test_bug_spec.py  test_cli_swebench.py  test_code_cleaner.py  test_context_builder.py  test_download_swebench_lite.py  test_environment.py  test_executor_validator.py  test_feedback_loop.py  test_openai_client.py  test_pipeline_mock.py  test_prompts.py  test_repo_manager.py  test_result_writer.py  test_retriever.py  test_swebench_adapter.py  test_swebench_experiment_scripts.py
tests/fixtures/: fake_swebench_lite.jsonl
论文基础/: 总结.md
